<resources>
    <string name="app_name">PhoneCallLooper</string>
    <string name="settings_num_text_hint">Введите номер,начиная с +</string>
    <string name="drop_edit_text_hint">Время для сброса (cек)</string>
    <string name="drop_text">Введите время для сброса:</string>
    <string name="settings_num_text">Введите номер настройщика:</string>
    <string name="settings_num_btn_text">Ввести номер настройщика</string>
    <string name="start_btn_text">Начать</string>
    <string name="stop_btn_text">Прекратить работу</string>
    <string name="OK">Ок</string>
    <string name="enter_number_setter">Введите номер настройщика</string>
    <string name="check_list_numbers">Посмотреть список номеров</string>
</resources>