<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:padding="@dimen/padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_reset"
            android:text="@string/drop_text"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/drop_sec"
            android:inputType="number"
            android:hint="@string/drop_edit_text_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:layout_marginTop="@dimen/margin_top"
            android:id="@+id/start_btn"
            android:text="@string/start_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="@dimen/margin_top"
            android:id="@+id/stop_btn"
            android:text="@string/stop_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/change_num"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/settings_num_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/check_numbers"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/check_list_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</layout>